fixed footer links and changed navbar default on mobile to false

--- a/src/App.scss
+++ b/src/App.scss
@@ -46,6 +46,10 @@ body {
     #1d1b37 border-box;
 }
 
+.nav-item-footer > * {
+  padding: 0 !important;
+}
+
 
 a {
   color: inherit;
